--- a/README
+++ b/README
@@ -5,7 +5,7 @@ What is SQSH?
 
 Sqsh (pronounced skwish) is short for SQshelL (pronounced s-q-shell),
 it is intended as a replacement for the venerable 'isql' program supplied
-by Sybase.  It came about due to years of frustration of trying to do
+by SAP Sybase.  It came about due to years of frustration of trying to do
 real work with a program that was never meant to perform real work.
 
 Sqsh is much more than a nice prompt (a la 'dsql', from David B. Joyner),
@@ -29,9 +29,10 @@ Sqsh may be found on the following site:
 Licensing
 -=-=-=-=-=-
 
-99% of the software that I use is free, therefore I like to give back
-in kind. Sqsh is held under the GNU General Public License (GPL) and
-therefore may be freely distributed under the terms of this license.
+99% of the software that we, the authors of Sqsh, use is free,
+therefore we like to give back in kind. Sqsh is held under the
+GNU General Public License (GPL) and therefore may be freely
+distributed under the terms of this license.
 
 Building and Installing
 -=-=-=-=-=-=-=-=-=-=-=-
