--- a/doc/sqshrc-2.5
+++ b/doc/sqshrc-2.5
@@ -32,6 +32,7 @@
   where type='P' at isolation 0"
 \set localeconv=Off
 \set login_timeout=10
+# \set nosepline=On
 # \set p2faxm=1000
 # \set p2fname='$HOME/.sqsh/p2fmsg.out'
 
